Opened 12 years ago
Closed 12 years ago
#3879 closed defect (fixed)
wavpack: CRC error 2
| Reported by: | ami_stuff | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avcodec |
| Version: | git-master | Keywords: | wavpackenc wavpack |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | yes |
Description
http://samples.mplayerhq.hu/A-codecs/wavpcm/madbear.wav
$ ffmpeg -i madbear.wav -ac 3 out.wv
ffmpeg version 2.3.git Copyright (c) 2000-2014 the FFmpeg developers
built on Aug 21 2014 13:25:12 with gcc 4.6.2 (GCC)
configuration: --disable-pthreads --disable-yasm --enable-gpl --disable-ffprob
e
libavutil 54. 5.100 / 54. 5.100
libavcodec 56. 0.101 / 56. 0.101
libavformat 56. 1.100 / 56. 1.100
libavdevice 56. 0.100 / 56. 0.100
libavfilter 5. 0.100 / 5. 0.100
libswscale 3. 0.100 / 3. 0.100
libswresample 1. 1.100 / 1. 1.100
libpostproc 53. 0.100 / 53. 0.100
[pcm_s16le @ 01dc4f40] Warning: not compiled with thread support, using thread e
mulation
Guessed Channel Layout for Input Stream #0.0 : stereo
Input #0, wav, from 'madbear.wav':
Metadata:
encoder : File created by GoldWave. GoldWave copyright (C) Chris Cr
aig
Duration: 00:00:06.48, bitrate: 352 kb/s
Stream #0:0: Audio: pcm_s16le ([1][0][0][0] / 0x0001), 11025 Hz, 2 channels,
s16, 352 kb/s
[wavpack @ 01cdf140] Warning: not compiled with thread support, using thread emu
lation
[pcm_s16le @ 01de1ba0] Warning: not compiled with thread support, using thread e
mulation
Output #0, wv, to 'out.wv':
Metadata:
encoder : Lavf56.1.100
Stream #0:0: Audio: wavpack, 11025 Hz, 2.1, s16p, 128 kb/s
Metadata:
encoder : Lavc56.0.101 wavpack
Stream mapping:
Stream #0:0 -> #0:0 (pcm_s16le (native) -> wavpack (native))
Press [q] to stop, [?] for help
size= 226kB time=00:00:08.00 bitrate= 231.5kbits/s
video:0kB audio:226kB subtitle:0kB other streams:0kB global headers:0kB muxing o
verhead: 0.039759%
$ ffmpeg -err_detect +crccheck -i out.wv -f null -
ffmpeg version 2.3.git Copyright (c) 2000-2014 the FFmpeg developers
built on Aug 21 2014 13:25:12 with gcc 4.6.2 (GCC)
configuration: --disable-pthreads --disable-yasm --enable-gpl --disable-ffprob
e
libavutil 54. 5.100 / 54. 5.100
libavcodec 56. 0.101 / 56. 0.101
libavformat 56. 1.100 / 56. 1.100
libavdevice 56. 0.100 / 56. 0.100
libavfilter 5. 0.100 / 5. 0.100
libswscale 3. 0.100 / 3. 0.100
libswresample 1. 1.100 / 1. 1.100
libpostproc 53. 0.100 / 53. 0.100
[wavpack @ 01dc5180] Warning: not compiled with thread support, using thread emu
lation
[wavpack @ 01dc5180] Too few bits (-1) left
[wavpack @ 01dc5180] CRC error
Input #0, wv, from 'out.wv':
Metadata:
encoder : Lavf56.1.100
Duration: 00:00:06.48, start: 0.000000, bitrate: 285 kb/s
Stream #0:0: Audio: wavpack, 11025 Hz, 2.1, s16p
[pcm_s16le @ 01df6780] Warning: not compiled with thread support, using thread e
mulation
[wavpack @ 01deb020] Warning: not compiled with thread support, using thread emu
lation
Output #0, null, to 'pipe:':
Metadata:
encoder : Lavf56.1.100
Stream #0:0: Audio: pcm_s16le, 11025 Hz, 2.1, s16, 529 kb/s
Metadata:
encoder : Lavc56.0.101 pcm_s16le
Stream mapping:
Stream #0:0 -> #0:0 (wavpack (native) -> pcm_s16le (native))
Press [q] to stop, [?] for help
[wavpack @ 01deb020] Too few bits (-1) left
[wavpack @ 01deb020] CRC error
[wavpack @ 01deb020] Too few bits (-1) left
[wavpack @ 01deb020] CRC error
[wavpack @ 01deb020] Too few bits (0) left
[wavpack @ 01deb020] CRC error
[wavpack @ 01deb020] Too few bits (-1) left
[wavpack @ 01deb020] CRC error
size=N/A time=00:00:06.47 bitrate=N/A
video:0kB audio:419kB subtitle:0kB other streams:0kB global headers:0kB muxing o
verhead: unknown
Change History (7)
follow-up: 3 comment:1 by , 12 years ago
comment:2 by , 12 years ago
Probably #2881 fix wasn't sufficient. That seems to be because the stream is truncated (again), seeing the message.
follow-up: 5 comment:3 by , 12 years ago
Replying to ami_stuff:
It's unrelated, but also output from this:
$ ffmpeg -i madbear.wav -ac 1 -ar 300000 out.wv
doesn't decode correctly
I've fixed that (decoder complaining about block size I think) but could you still fill a bug report?
Your -ac 3 (root cause of the issue, other values seem fine) issue looks harder and is actually not related to encoder not allocating enough...
comment:4 by , 12 years ago
| Component: | undetermined → avcodec |
|---|---|
| Keywords: | wavpack added |
| Reproduced by developer: | set |
| Status: | new → open |
| Version: | unspecified → git-master |
comment:5 by , 12 years ago
comment:6 by , 12 years ago
| Analyzed by developer: | set |
|---|---|
| Keywords: | wavpackenc added |
This is an error occurring it seems because the info to determine the trailing bits is not reset when encoding successively blocks.
comment:7 by , 12 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |



It's unrelated, but also output from this:
$ ffmpeg -i madbear.wav -ac 1 -ar 300000 out.wv
doesn't decode correctly